--- a/thehive-templates/CuckooSandbox_File_Analysis_Inet_1_0/long.html
+++ b/thehive-templates/CuckooSandbox_File_Analysis_Inet_1_0/long.html
@@ -138,7 +138,7 @@
         <div class="panel-body">
 
             <div>
-                <h4>Suricata Alerts</h4>
+                <h4>Snort Alerts</h4>
                 <br>
                 <dl class="dl-horizontal" ng-repeat="snort in content.snort_alerts track by $index">
                     <dd>{{ snort }}<dd>
