Properly escape artifacts in report

--- a/thehive-templates/TorBlutmagie_1_0/long.html
+++ b/thehive-templates/TorBlutmagie_1_0/long.html
@@ -10,7 +10,7 @@
       <div class="panel-body">
         <dl class="dl-horizontal">
           <dd>Address</dd>
-          <dt>{{n.hostname}} ({{n.ip_address}})</dt>
+          <dt>{{n.hostname | fang}} ({{n.ip_address | fang}})</dt>
           <dd>AS</dd>
           <dt>{{n.as_name}} ({{n.as_number}})</dt>
           <dd>Country</dd>
