Analyzer diet, no external dependencies, requires manual repo clone

--- a/thehive-templates/MISPWarningLists_1_0/long.html
+++ b/thehive-templates/MISPWarningLists_1_0/long.html
@@ -12,7 +12,7 @@
             <ul ng-repeat="list in content.results">
                 <li>{{list.name}}</li>
             </ul>
-            <p>The warning lists were updated {{content.last_update | number:0}} seconds ago.</p>
+            <p>MISP-warninglists is currently at {{content.last_update}}.</p>
         </dd>
       </dl>
     </div>
