--- a/thehive-templates/Shodan_Search_1_0/long.html
+++ b/thehive-templates/Shodan_Search_1_0/long.html
@@ -1,52 +1,67 @@
-    <div class="panel panel-info" ng-if="success">
-        <div class="panel-heading">
-            Domain Information of  <strong>{{(artifact.data || artifact.attachment.name) | fang}}</strong>
-        </div>
-        <div class="panel-body">
-            asn:
-                <li data-ng-repeat="i in content.infos_domain.asn">
-                    {{i}}
-                </li>
-            <br>
-            isp:
-                <li data-ng-repeat=" i in content.infos_domain.isp">
-                    {{i}}
-                </li>
-            <br>
-            all_domains:
-                <li data-ng-repeat="i in content.infos_domain.all_domains">
-                    {{i}}
-                </li>
-            <br>
-            ports:
-                <li data-ng-repeat="i in content.infos_domain.ports">
-                    {{i}}
-                </li>
-            <br>
-            orgs:
-                <li data-ng-repeat="i in content.infos_domain.orgs">
-                    {{i}}
-                </li>
-            <br>
-            transports:
-                <li data-ng-repeat="i in content.infos_domain.transports">
-                    {{i}}
-                </li>
-            <br>
-            ips:
-                <li data-ng-repeat="i in content.infos_domain.ips">
-                    {{i}}
-                </li>
-            <br>
-
-        </div>
+<div class="panel panel-info" ng-if="success">
+    <div class="panel-heading">
+        Domain Information of  <strong>{{artifact.data | fang}}</strong>
     </div>
+    <div class="panel-body">
+        <dl class="dl-horizontal">
+            <dt>ASN</dt>
+            <dd>
+                {{content.infos_domain.asn.join(', ')}}
+            </dd>
+        </dl>
+        <dl class="dl-horizontal">
+            <dt>ISP</dt>
+            <dd>
+                <ul class="list-unstyled">
+                    <li data-ng-repeat=" i in content.infos_domain.isp">{{i}}</li>
+                </ul>
+            </dd>
+        </dl>
+        <dl class="dl-horizontal">
+            <dt>all_domains</dt>
+            <dd>
+                <ul class="list-unstyled">
+                    <li data-ng-repeat="i in content.infos_domain.all_domains">{{i | fang}}</li>
+                </ul>
+            </dd>
+        </dl>
+        <dl class="dl-horizontal">
+            <dt>Ports</dt>
+            <dd>
+                {{content.infos_domain.ports.join(', ')}}
+            </dd>
+        </dl>
+        <dl class="dl-horizontal">
+            <dt>Orgs</dt>
+            <dd>
+                <ul class="list-unstyled">
+                    <li data-ng-repeat="i in content.infos_domain.orgs">{{i}}</li>
+                </ul>
+            </dd>
+        </dl>
+        <dl class="dl-horizontal">
+            <dt>Transports</dt>
+            <dd>
+                {{content.infos_domain.transports.join(', ')}}                
+            </dd>
+        </dl>
+        <dl class="dl-horizontal">
+            <dt>IPs</dt>
+            <dd>
+                <ul class="list-unstyled">
+                    <li data-ng-repeat="i in content.infos_domain.ips">{{i | fang}}</li>
+                </ul>
+            </dd>
+        </dl>
 
-    <div class="panel panel-danger" ng-if="!success">
-        <div class="panel-heading">
-            <strong>{{(artifact.data || artifact.attachment.name) | fang}}</strong>
-        </div>
-        <div class="panel-body">
-            {{content.errorMessage}}
-        </div>
     </div>
+</div>
+
+<div class="panel panel-danger" ng-if="!success">
+    <div class="panel-heading">
+        <strong>{{artifact.data | fang}}</strong>
+    </div>
+    <div class="panel-body">
+        {{content.errorMessage}}
+    </div>
+</div>
