fix HybridAnalysis name in reports

--- a/thehive-templates/HybridAnalysis_GetReport_1_0/long.html
+++ b/thehive-templates/HybridAnalysis_GetReport_1_0/long.html
@@ -10,7 +10,7 @@
 
 <div class="panel panel-info" ng-if="success">
   <div class="panel-heading">
-    <!-- VxStream Sandbox Hash Report Publuc API: Related Reports -->
+    <!-- HybridAnalysis Sandbox Hash Report Public API: Related Reports -->
     Related Reports
   </div>
   <!-- Hash and File (also hash) -->
