--- a/thehive-templates/Onyphe_Threats_1_0/long.html
+++ b/thehive-templates/Onyphe_Threats_1_0/long.html
@@ -3,7 +3,50 @@
 		Onyphe Threats - <strong>{{(artifact.data || artifact.attachment.name) | fang}}</strong>
 	</div>
 	<div class="panel-body">
+        <dl class="dl-horizontal">
+            <dt>
+                My IP
+            </dt>
+            <dd>
+                {{content.threats.myip}}
+            </dd>
+        </dl>
+        <dl class="dl-horizontal">
+            <dt>
+                Number of results
+            </dt>
+            <dd>
+                {{content.threats.count}}
+            </dd>
+        </dl>
+        <dl class="dl-horizontal">
+            <dt>
+                Error(s)
+            </dt>
+            <dd>
+                {{content.threats.error}}
+            </dd>
+        </dl>
 
+		<table class="table" ng-if="content.threats.results.length !== 0 ">
+            <thead>
+                <th>Category</th>
+                <th>Type</th>
+                <th>IPv6</th>
+                <th>Subnet</th>
+                <th>Threat list</th>
+                <th>Seen date</th>
+            </thead>
+            <tbody ng-repeat="r in content.threats.results | orderBy:'-seen_date'">
+                <tr>
+                    <td>{{r["@category"]}}</td>
+                    <td>{{r["@type"]}}</td>
+                    <td>{{r.ipv6}}</td>
+                    <td>{{r.subnet}}</td>
+                    <td><b>{{r.threatlist}}</b></td>
+                    <td>{{r.seen_date}}</td>
+                </tr>
+            </tbody>
     </div>
 </div>
 
