--- a/thehive-templates/Onyphe_Geolocate_1_0/long.html
+++ b/thehive-templates/Onyphe_Geolocate_1_0/long.html
@@ -13,7 +13,7 @@
         </dl>
         <dl class="dl-horizontal">
             <dt>
-                Number of result
+                Number of results
             </dt>
             <dd>
                 {{content.location.count}}
