--- a/thehive-templates/VMRay_2_0/long.html
+++ b/thehive-templates/VMRay_2_0/long.html
@@ -31,7 +31,7 @@
 		</dl>
 		<dl ng-if="sample.sample_webif_url" class="dl-horizontal">
 			<dt>Link to report</dt>
-			<dd>{{sample.sample_webif_url}}</span></dd>
+			<dd>{{sample.sample_webif_url}}</dd>
 		</dl>
 		<hr>
 		<dl class="dl-horizontal">
