--- a/thehive-templates/JoeSandbox_Url_Analysis_2_0/long.html
+++ b/thehive-templates/JoeSandbox_Url_Analysis_2_0/long.html
@@ -88,7 +88,7 @@
                     <h5>{{f.name}}</h5>
                     <dl class="dl-horizontal" ng-repeat="(k,v) in f" ng-if="k !== 'name'">
                         <dt>{{k}}</dt>
-                        <dd>{{v}}</dt>
+                        <dd>{{v}}</dd>
                     </dl>
                 </div>
                 <div ng-if="!content.dropped.file">
@@ -102,7 +102,7 @@
                 <br>
                 <dl class="dl-horizontal">
                     <dt>Score</dt>
-                    <dd>{{content.confidence.score}}/{{content.confidence.maxscore}}</dt>
+                    <dd>{{content.confidence.score}}/{{content.confidence.maxscore}}</dd>
                 </dl>
             </div>
             <hr>
@@ -113,7 +113,7 @@
                 <br>
                 <dl class="dl-horizontal">
                     <dt>Score</dt>
-                    <dd>{{content.detection.score}}/{{content.detection.maxscore}}</dt>
+                    <dd>{{content.detection.score}}/{{content.detection.maxscore}}</dd>
                     <dd>
                         <div ng-repeat="(k,v) in content.detection">
                             <span ng-switch="k">
