--- a/thehive-templates/Nessus_2_0/long.html
+++ b/thehive-templates/Nessus_2_0/long.html
@@ -121,7 +121,7 @@
                                     <td>{{vuln.count}}</td>
                                 </tr>
                             </tbody>
-                        </table
+                        </table>
                         <br>
                     </div>
                 </div>
