--- a/thehive-templates/Threatcrowd_1_0/long.html
+++ b/thehive-templates/Threatcrowd_1_0/long.html
@@ -4,17 +4,56 @@
         <strong>{{artifact.data}}</strong>
     </div>
     <div class="panel-body">
-        <p class="dl-horizontal">
+        <h4 class="dl-horizontal">
             Votes :  <strong>{{content.votes}}</strong>
             <br/>
             <a href="{{content.permalink}}">View report on threatcrowd.org</a>
-        </p>
-        <table>
+        </h4>
+        <table class="table table-bordered">
             <tr>
-                <th>references</th>
+                <th>References</th>
             </tr>
             <tr ng-repeat="ref in ::content.references">
-				{{ref}}
+				<td>{{ref}}</td>
+			</tr>
+        </table>
+        <table class="table table-bordered">
+            <tr>
+                <th>Domains</th>
+            </tr>
+            <tr ng-repeat="dom in ::content.domains">
+                <td>{{dom}}</td>
+			</tr>
+        </table>
+        <table class="table table-bordered">
+            <tr>
+                <th>Subdomains</th>
+            </tr>
+            <tr ng-repeat="dom in ::content.subdomains">
+                <td>{{dom}}</td>
+			</tr>
+        </table>
+        <table class="table table-bordered">
+            <tr>
+                <th>Emails</th>
+            </tr>
+            <tr ng-repeat="email in ::content.emails">
+                <td>{{email}}</td>
+			</tr>
+        </table>
+        <table class="table table-bordered">
+            <tr>
+                <th colspan="3">Resolutions</th>
+            </tr>
+            <tr>
+                <th>Last resolved</th>
+                <th>Domain</th>
+                <th>Ip</th>
+            </tr>
+            <tr ng-repeat="res in ::content.resolutions">
+                <td>{{res.last_resolved}}</td>
+                <td>{{res.domain}}</td>
+                <td>{{res.ip_address}}</td>
 			</tr>
         </table>
     </div>
